换成okhttp库和修复moduleView关闭时可能会崩溃的bug。